# CJOPROO

jogo-raylib/meu_jogo/: init.hpp  loadTextures.hpp  main.cpp  unloadTextures.cpp
jogo-raylib/meu_jogo/assets/sprites/backgrounds/: main_menu.aseprite
jogo-raylib/meu_jogo/assets/sprites/backgrounds/match/: tileset.aseprite
jogo-raylib/meu_jogo/assets/sprites/entities/enemy/: enemy1.aseprite  enemy3.aseprite
jogo-raylib/meu_jogo/assets/sprites/entities/player/: hamster_hud.aseprite
jogo-raylib/meu_jogo/assets/sprites/objects/: machine_gun.aseprite  speed.aseprite
meu_jogo/: loadTextures.cpp  unloadTextures.hpp
meu_jogo/assets/sprites/entities/enemy/: boss.aseprite  enemy2.aseprite  enemy4.aseprite
meu_jogo/assets/sprites/entities/player/: fox.aseprite  hamster.aseprite
meu_jogo/assets/sprites/objects/: bullet.aseprite  cristal.aseprite  cristal_hud.aseprite  damage.aseprite  dash.aseprite  hearth.aseprite  hearth_plus.aseprite
prova/: exercicio2.hpp  exercicio3.cpp  prova-raissa.cpp
prova2/: prova-raissa.cpp  rectangle.cpp  rectangle.hpp
sistema-qtcreator/Biblioteca/: Book.cpp  Book.h  CMakeLists.txt  Librarian.h  Library.cpp  Library.h  LoginScreen.qml  Main.qml  MainScreen.qml  User.cpp  User.h  main.cpp
